frame strip fixed numbering, hide rows, wrapping

--- a/server/static/melee-authority.css
+++ b/server/static/melee-authority.css
@@ -19,10 +19,10 @@
 }
 
 .frame-strip tbody tr td {
-  min-width: 30px;
-  min-height: 30px;
-  width: 30px;
-  height: 30px;
+  min-width: 31px;
+  min-height: 31px;
+  width: 31px;
+  height: 31px;
   padding: 0px;
 }
 
